--- a/style.css
+++ b/style.css
@@ -1,582 +1,527 @@
-*{
-    padding: 0;
-    margin: 0;
-    
+* {
+  padding: 0;
+  margin: 0;
 }
-/* header starts */
-header{
-    padding: 10px 100px;
-    background-color: #1d2126;
-    /* text-align: center; */
-    text-align: right;
-    height: 61px;
+header {
+  padding: 10px 100px;
+  background-color: #1d2126;
+  text-align: end;
+  height: 60px;
+  justify-content: space-between;
 }
-.leftnavbar{
-    height: 30px;
-    padding-top: 25px;
-    padding-left: 50px;
-    float: left;
-    font-family: "Open Sans";
-    color: #829099;
+.leftnavbar {
+  height: 30px;
+  padding-top: 25px;
+  padding-left: 50px;
+  float: left;
+  font-family: "Open Sans";
+  color: #829099;
 }
-#active{
-    border: 1px solid #23b7a4;
-    padding: 8px;
-    color: #23b7a4;
-    margin: 5px;
+#active {
+  padding: 8px;
+  color: #829099;
+  margin: 5px;
 }
-.rightnavbar{
-    font-family: "Open Sans";
-    padding-top: 25px;
-    padding: 5px;
-    text-decoration: none;
-    color: #829099;
-    float: inline-end;
-    line-height: 65px;
+#active:hover {
+  border: 1px solid #23b7a4;
+  color: white;
 }
-.rightnavbar:hover{
-    border: 1px solid #829099;
+.rightnavbar a {
+  font-family: "Open Sans";
+  padding-top: 25px;
+  padding: 8px;
+  text-decoration: none;
+  color: #829099;
+  float: inline-end;
+  line-height: 65px;
 }
-/* header ends */
+.rightnavbar a:hover {
+  border: 1px solid #23b7a4;
+  color: white;
+}
 
-/* banner starts */
-#banner{
-    background-image: url("banner.png");
-    height: 660px;
+#banner {
+  background-image: url("/images/banner.png");
+  height: 550px;
 }
-#banner .box{
- /* color: #23b7a4; */
- padding: 150px;
+#banner .box {
+  padding: 150px;
+}
+#banner .box h2 {
+  width: 507px;
+  height: 26px;
+  color: #ffffff;
+  font-family: "Quattrocento Sans";
+  font-size: 30px;
+  font-weight: 500;
+  font-style: normal;
+  letter-spacing: normal;
+  line-height: 42px;
+  text-align: left;
+  text-transform: uppercase;
+  font-style: normal;
+  letter-spacing: normal;
+  line-height: normal;
+}
+#banner .box p {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 648px;
+  height: 43px;
+  color: #ccd0d7;
+  font-family: "Open Sans";
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: normal;
+  line-height: 26px;
+  text-align: left;
+  font-style: normal;
+  letter-spacing: normal;
+  line-height: normal;
+}
+#banner .box .button {
+  text-align: center;
+  align-content: center;
 
+  margin-top: 20px;
+  margin-right: 2px;
+  border: 2px solid #ffffff;
+  background-color: transparent;
+  color: #2d3436;
 }
-#banner .box h2{
+#banner .box .button:hover {
+  border: 2px solid #23b7a4;
+  color: white;
+  background-color: transparent;
+}
 
-        /* border: 1px solid black; */
-        width: 507px;
-        height: 26px;
-        color: #ffffff;
-        font-family: "Quattrocento Sans";
-        font-size: 30px;
-        font-weight: 500;
-        font-style: normal;
-        letter-spacing: normal;
-        line-height: 42px;
-        text-align: left;
-        text-transform: uppercase;
-        font-style: normal;
-        letter-spacing: normal;
-        line-height: normal;
+#about {
+  padding: 50px 100px;
+  background-color: white;
+  height: 534px;
+  font-family: sans-serif;
 }
-#banner .box p{
+#about .flex-container {
+  display: flex;
+}
+#about .flex-container .leftabout {
+  display: inline-block;
+  width: 600px;
+  align-content: center;
+  text-align: left;
+}
+#about .flex-container .aboutright {
+  width: 600px;
+}
 
-    padding-top: 20px;
-    padding-bottom: 20px;
-    width: 648px;
-    height: 43px;
-    color: #ccd0d7;
-    font-family: "Open Sans";
-    font-size: 16px;
-    font-weight: 400;
-        font-style: normal;
-        letter-spacing: normal;
-        line-height: 26px;
-        text-align: left;
-        font-style: normal;
-        letter-spacing: normal;
-        line-height: normal;
+#about .flex-container .aboutright .count {
+  display: flex;
+  padding: 20px;
+  flex-direction: row;
 }
-#banner .box .button{
-    
-        /* width: 120px; */
-        text-align: center;
-        align-content: center;
-        /* height: 40px; */
-        margin-top: 20px;
-        margin-right: 2px;
-        border: 2px solid #ffffff;
-        background-color: transparent;
-        color: white;
-        /* background-color: #23b7a4; */
+#about .flex-container .aboutright .count .count-number {
+  padding: 5px;
+  border: 1px solid #23b7a4;
+  background-color: #23b7a4;
+  color: white;
+}
+#about .flex-container .aboutright .count .count-number .leftsection {
+  margin: 2px;
+  text-align: left;
+}
+#about .flex-container .aboutright .count .count-number .leftsection h3 {
+  padding: 0 20px;
+}
 
-}
-#banner .box .button:hover{
-border: 2px solid #23b7a4;
-color: white;
-background-color: #23b7a4;
-}
-/*  banner ends*/
-
-/* about starts */
-#about{
-    padding: 50px 100px;
-    background-color: white;
-    height: 534px;
-    font-family:sans-serif; 
-}
-#about h2{
-    border-left: 5px solid #e1e6ea;
-    padding-left: 10px;
-    margin-bottom: 25px;
-}
-#about p{
-    /* border-left: 5px solid #e1e6ea; */
-    padding-left: 10px;
-    margin-bottom: 25px;
+#about p {
+  border-left: 5px solid #e1e6ea;
+  padding-left: 10px;
+  margin-bottom: 25px;
 }
 #about .abouticon {
-    padding-left: 10px;
-    margin-bottom: 25px;
+  padding-left: 10px;
+  margin-bottom: 25px;
 }
 
-#about #aboutsocial{
-    
-    width: 60px;
-    height: 60px;
-    background-color: #898b8d;
-    color: #fff;
-    font-size: 32px;
-    font-weight: 200;
-    line-height: 48px;
-    font-style: normal;
-    letter-spacing: normal;
-    text-align: center;
-    align-items: center;  
+#about #aboutsocial {
+  width: 60px;
+  height: 60px;
+  background-color: #898b8d;
+  color: #fff;
+  font-size: 32px;
+  font-weight: 200;
+  line-height: 48px;
+  font-style: normal;
+  letter-spacing: normal;
+  text-align: center;
+  align-items: center;
 }
-#about #aboutsocial:hover{
-    background-color: #c8cdd0;
-    color: #ffffff;
+#about #aboutsocial:hover {
+  background-color: #c8cdd0;
+  color: #ffffff;
 }
-/* about ends */
-
-/* teams starts */
 #team {
-    border-top: 1px solid rgb(207, 195, 195);
-    padding: 50px 100px;
-    background-color: rgb(255, 255, 255);
-    height: 470px;
-    font-family: sans-serif;
+  border-top: 1px solid rgb(207, 195, 195);
+  padding: 50px 100px;
+  background-color: rgb(255, 255, 255);
+  height: 450px;
+  font-family: sans-serif;
 }
-
+.teamrow {
+  display: flex;
+  margin: 40px;
+}
 #team h2 {
-    border-left: 5px solid #e1e6ea;
-    padding-left: 10px;
-    margin-bottom: 25px;
+  border-left: 5px solid #e1e6ea;
+  padding-left: 10px;
+  margin-bottom: 25px;
 }
-#team .card{
-    /* border: 1px solid black; */
-    position: relative;
-    width: 100%;
-    margin: 10px;
-    background-color: #dadfe0;
+#team .card {
+  position: relative;
+  width: 100%;
+  margin: 10px;
+  background-color: #dadfe0;
 }
-#team .card .image{
-    display: block;
+#team .card .image {
+  display: block;
 }
-#team .card .image .overlay{
-    position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: 100%;
-        width: 100%;
-        opacity: 0.3;
-        transition: .3s ease;
-        background-color: rgb(218, 218, 218);
+#team .card .image .overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0.3;
+  transition: 0.3s ease;
+  background-color: rgb(218, 218, 218);
 }
-#team .card:hover .overlay{
-    opacity: 0.5;
+#team .card:hover .overlay {
+  opacity: 0.5;
 }
 #team .card .image .overlay .icon {
-    color: white;
-    font-size: 100px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
+  color: white;
+  font-size: 100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
 }
-.fa-brands{
-    padding: 10px;
-    background-color: #000000;
-    font-size: 15px;
+.fa-brands {
+  padding: 10px;
+  background-color: #000000;
+  font-size: 15px;
 }
-.fa-brands:hover{
-    background-color: #000000;
-    color: #ffffff;
+.fa-brands:hover {
+  background-color: #000000;
+  color: #ffffff;
 }
- 
- 
-
-
-/* #team .card img:hover{ */
-    /* background-color: #d7e5f3; */
-    /* opacity: 0.5; */
-/*  */
-/* } */
-
-#team .card:hover{
-    background-color: #1d2126;
-    color: #ffffff;
+#team .card:hover {
+  background-color: #1d2126;
+  color: #ffffff;
 }
-#team .card .name{
-padding-left: 10px;
-padding-top: 10px;
+#team .card .name {
+  padding-left: 10px;
+  padding-top: 10px;
 }
-#team .card .desc{
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 15px;
-    color: #829099;
-
+#team .card .desc {
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 15px;
+  color: #829099;
 }
-
-
-/* teams ends*/
-
-/* work starts here */
 #work {
-    
-    border-top: 1px solid black ;
-    padding: 50px 100px;
-    height: 899px;
-    background-color: #3a454d;
-    font-family: sans-serif;
+  border-top: 1px solid black;
+  padding: 50px 100px;
+  height: 700px;
+  background-color: #3a454d;
+  font-family: sans-serif;
 }
 
 #work h2 {
-    border-left: 5px solid #4e5a62;
-    padding-left: 10px;
-    margin-bottom: 25px;
-    color: #ffffff;
+  border-left: 5px solid #4e5a62;
+  padding-left: 10px;
+  margin-bottom: 25px;
+  color: #ffffff;
 }
 #work .column {
-    position: relative;
-    float: left;
-    width: 30%;
-    padding: 15px;
+  position: relative;
+  float: left;
+  width: 30%;
+  padding: 15px;
 }
-#work .column .image{
-    display: block;
-    width: 100%;
-    
+#work .column .image {
+  display: block;
+  width: 100%;
 }
 .overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: .3s ease;
-    background-color: rgb(184, 184, 184);
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.3s ease;
+  background-color: rgb(184, 184, 184);
 }
 .column:hover .overlay {
-    opacity: 0.7;
-    border: none;
+  opacity: 0.7;
+  border: none;
 }
 .icon {
-    color: white;
-    font-size: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+  color: white;
+  font-size: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
-.title{
-    border: 1px solid #000000;
-    background-color: #000000;
-    display: flex;
-    color: white;
-    width: 90%;
-        font-size: 16px;
-        position: absolute;
-        top: 90%;
-        left: 50%;
-        transform: translate(-50%, 20%);
-        text-align: center;
-        justify-content: center;
-    
-    
+.title {
+  border: 1px solid #000000;
+  background-color: #000000;
+  display: flex;
+  color: white;
+  width: 90%;
+  font-size: 16px;
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, 20%);
+  text-align: center;
+  justify-content: center;
 }
 .fa-add:hover {
-    color: rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
 }
-
 
 #work .row::after {
-    content: "";
-    clear: both;
-    display: table;
+  content: "";
+  clear: both;
+  display: table;
 }
 
-#work .column:hover{
-    opacity: 0.7;
-
+#work .column:hover {
+  opacity: 0.7;
 }
-/* work ends here */
-
-/* services starts */
-#services{
-    height: 651px;
-    background-color: white;
-    border-top: 1px solid black;
-    padding: 50px 100px;
-    font-family: sans-serif;
+.btndiv {
+  text-align: center;
+  padding: 20px;
 }
-#services h2{
-    border-left: 5px solid #91979b;
-    padding-left: 10px;
-    margin-bottom: 25px;
-    color: #000000;
+.btndiv .btnshowme {
+  padding: 20px;
+  background-color: transparent;
+  color: rgb(255, 255, 255);
+  border-color: rgb(255, 255, 255);
+  text-align: center;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
-.servicecard{
-    display: inline-block;
-    width: 15%;
-    flex-wrap: wrap;
-    text-align: center;
-    padding: 0px 30px;
-    margin: 20px;
-    /* border: 1px solid black; */
-    /* position: relative; */
+#services {
+  height: 651px;
+  background-color: white;
+  border-top: 1px solid black;
+  padding: 50px 100px;
+  font-family: sans-serif;
 }
-.servicecard img{
-    /* border: 1px solid black; */
-    padding: 20px 20px;
+#services h2 {
+  border-left: 5px solid #91979b;
+  padding-left: 10px;
+  margin-bottom: 25px;
+  color: #000000;
 }
-.servicecard h5{
-    /* border: 1px solid black; */
-    padding: 5px;
-    font-weight: 600;
-    color: #000000;
+.servicecard {
+  display: inline-block;
+  width: 15%;
+  flex-wrap: wrap;
+  text-align: center;
+  padding: 0px 30px;
+  margin: 20px;
 }
-.servicecard p{
-    justify-content: left;
-    /* border: 1px solid black; */
-    display: block;
-    line-break: normal;
-    padding: 5px;
-    text-align: start;
-    word-break: keep-all;
-    color: #8d8f92;
+.servicecard img {
+  padding: 20px 20px;
 }
-
-/* services ends */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* Features starts */
+.servicecard h5 {
+  padding: 5px;
+  font-weight: 600;
+  color: #000000;
+}
+.servicecard p {
+  justify-content: left;
+  display: block;
+  line-break: normal;
+  padding: 5px;
+  text-align: start;
+  word-break: keep-all;
+  color: #8d8f92;
+}
 #features {
-    height: 732px;
-    background-color: #3a454d;
-    border-top: 1px solid black;
-    
-    padding-top: 220px;
-    padding-bottom:20px;
-    padding-left: 100px;
-    padding-right: 100px;
-    font-family: sans-serif;
+  height: 550px;
+  background-color: #3a454d;
+  border-top: 1px solid black;
+  padding-top: 100px;
+  padding-bottom: 20px;
+  padding-left: 100px;
+  padding-right: 100px;
+  font-family: sans-serif;
 }
 #features h2 {
-    border-left: 5px solid #91979b;
-    padding-left: 10px;
-    margin-bottom: 25px;
-    color: #ffffff;
+  border-left: 5px solid #91979b;
+  padding-left: 10px;
+  margin-bottom: 25px;
+  color: #ffffff;
 }
 .featurecard {
-    /* display: i; */
-    /* width: 22%; */
-    /* padding: 10px 10px; */
-    /* margin: 10px; */
-    /* z-index: 0; */
-    /* border: 1px solid black; */
-    /* position: relative; */
-    /* border: 1px solid black; */
-    margin: 10px;
-    padding: 20px;
-    display: inline-block;
-    width: 320px;
+  margin: 10px;
+  padding: 20px;
+  display: inline-block;
+  width: 320px;
 }
-
 .featurecard img {
-    
-    height: 240px;
-    /* border: 1px solid black; */
-    /* padding: 20px 20px; */
+  height: 240px;
 }
-
 .featurecard h5 {
-    /* border: 1px solid black; */
-    margin: 20px 0px;
-    /* float: left; */
-    
-    padding: 5px;
-    font-weight: 600;
-    color: #ffffff;
+  margin: 20px 0px;
+  padding: 5px;
+  font-weight: 600;
+  color: #ffffff;
 }
 
 .featurecard p {
-    width: 200;
-    /* justify-content: left; */
-    /* border: 1px solid black; */
-    display: block;
-    /* line-break: normal; */
-    padding: 5px;
-    text-align: start;
-    word-break: keep-all;
-    color: #ffffff;
+  width: 200;
+  display: block;
+  padding: 5px;
+  text-align: start;
+  word-break: keep-all;
+  color: #ffffff;
 }
-
-/* features ends */
-/* contact starts */
 #contact {
-    height: 712px;
-    background-color: white;
-    border-top: 1px solid black;
-    font-family: sans-serif;
+  height: 600px;
+  background-color: white;
+  border-top: 1px solid black;
+  font-family: sans-serif;
 }
 #contact h2 {
-    border-left: 5px solid #91979b;
-    margin: 70px 100px;
-    padding-left: 10px;
-    margin-bottom: 25px;
-    color: #000000;
+  border-left: 5px solid #91979b;
+  margin: 70px 100px;
+  padding-left: 10px;
+  margin-bottom: 25px;
+  color: #000000;
 }
-#contact img{
-    
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-    /* height: 768px; */
-    width: 1348px
-
+#contact img {
+  position: absolute;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  height: 500px;
+  width: 1348px;
 }
-form{
-    /* border: 1px solid black; */
-    background-color: #ffffff;
-    /* z-index: -20; */
-    width: 50%;
-    height: 340px;
-    float: right;
+#contact .leftright {
+  display: flex;
+  width: 100%;
 }
-label{
-    padding: 5px;
-    margin: 5px;
+form {
+  padding: 30px 40px;
+  position: relative;
+  justify-content: center;
+  background-color: #3a454d2a;
+  z-index: 1;
+  width: 100%;
+  height: 500px;
+  color: rgb(63, 30, 30);
+  float: right;
+  padding: 20px;
+  text-align: left;
 }
-input[type=text] {
-    width: 40%;
-    box-sizing: border-box;
-    background-color: #eaeef1;
-    
+.message {
+  display: flex;
+  width: 40%;
+  height: 100px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.466);
+  border-radius: 4px;
+  background-color: #eaeef1;
+  resize: none;
 }
-input[type=email] {
-    width: 38%;
-    /* padding: 5px 20px; */
-    /* margin: 8px 0; */
-    box-sizing: border-box;
-    background-color: #eaeef1;
+#contact .leftright .btnsend {
+  padding: 20px;
+  background-color: transparent;
+  color: rgb(0, 0, 0);
+  border-color: rgb(0, 0, 0);
+  border-radius: 20px;
+  text-align: center;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
-input[type=button]{
-    background-color: #04AA6D;
-    border: 1px solid white ;
-    color: white;
-    padding: 16px 32px;
-    text-decoration: none;
-    margin: 4px 2px;
-    cursor: pointer;
+label {
+  padding: 5px;
+  margin: 5px;
 }
-.info{
-    padding: 20px;
-    width: 50%;
-    /* border:1px solid black; */
+input[type="text"] {
+  width: 40%;
+  box-sizing: border-box;
+  background-color: #eaeef1;
 }
-.info h3{
-    padding: 10px;
+input[type="email"] {
+  width: 38%;
+  box-sizing: border-box;
+  background-color: #eaeef1;
 }
-.info p{
-    padding: 10px;
-    color: #4a4e50;
+input[type="button"] {
+  background-color: #04aa6d;
+  border: 1px solid white;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
-/* contact ends */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* footer starts */
+.info {
+  padding: 20px;
+  width: 50%;
+}
+.info h3 {
+  padding: 10px;
+}
+.info p {
+  padding: 10px;
+  color: #4a4e50;
+}
 footer {
-    padding: 10px 100px;
-    background-color: #1d2126;
-    /* text-align: center; */
-    text-align: right;
-    height: 61px;
+  padding: 10px 100px;
+  background-color: #1d2126;
+  text-align: right;
+  height: 61px;
 }
 .leftfooter {
-    height: 30px;
-    padding-top: 25px;
-    padding-left: 50px;
-    float: left;
-    font-family: "Segoe UI", "Helvetica Neue", Helvetica, "Lucida Grande",Arial,Ubuntu,Cantarell," Fira Sans",sans-serif;
-    color: #829099;
+  height: 30px;
+  padding-top: 25px;
+  padding-left: 50px;
+  float: left;
+  font-family: "Segoe UI", "Helvetica Neue", Helvetica, "Lucida Grande", Arial,
+    Ubuntu, Cantarell, " Fira Sans", sans-serif;
+  color: #829099;
 }
 .rightfooter {
-    padding-top: 25px;
-    padding: 5px;
-    text-decoration: none;
-    color: #829099;
-    float: inline-end;
-    line-height: 65px;
+  padding-top: 25px;
+  padding: 5px;
+  text-decoration: none;
+  color: #829099;
+  float: inline-end;
+  line-height: 65px;
 }
-.rightfooter i{
-    padding: 10px;
+.rightfooter i {
+  padding: 10px;
 }
-/* footer ends */
-
-
-
-
-
-
-
-
-
-
